codex-agent-runtime-desktop/native/c-api/include/codex_agent.h

typedef int32_t codex_agent_status_t;
typedef struct codex_agent_context codex_agent_context_t;
typedef struct codex_agent_failure codex_agent_failure_t;
typedef struct codex_agent_mcp_server codex_agent_mcp_server_t;
typedef struct codex_agent_plugin_reference codex_agent_plugin_reference_t;
typedef struct codex_agent_connector codex_agent_connector_t;
typedef struct codex_agent_integration_connector codex_agent_integration_connector_t;
typedef struct codex_agent_integration_mcp_server codex_agent_integration_mcp_server_t;
typedef struct codex_agent_plugin_summary codex_agent_plugin_summary_t;
typedef struct codex_agent_integration codex_agent_integration_t;
typedef struct codex_agent_integration_authorization_state codex_agent_integration_authorization_state_t;
typedef struct codex_agent_authentication_state codex_agent_authentication_state_t;
typedef struct codex_agent_authorization_url codex_agent_authorization_url_t;
typedef struct codex_agent_authentication_method_api_key codex_agent_authentication_method_api_key_t;
typedef struct codex_agent_authentication_method_chat_gpt_browser
    codex_agent_authentication_method_chat_gpt_browser_t;
typedef struct codex_agent_authentication_method_chat_gpt_device_code
    codex_agent_authentication_method_chat_gpt_device_code_t;
typedef int32_t codex_agent_authentication_status_t;
typedef int32_t codex_agent_integration_kind_t;
typedef int32_t codex_agent_integration_authorization_status_t;
typedef struct codex_agent_string_view {
    const uint8_t *data;
    size_t size;
} codex_agent_string_view_t;
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_method_api_key_create(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *value,
    codex_agent_authentication_method_api_key_t **out_method);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_method_api_key_destroy(
    codex_agent_context_t *context,
    codex_agent_authentication_method_api_key_t **method);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_method_chat_gpt_browser_create(
    codex_agent_context_t *context,
    codex_agent_authentication_method_chat_gpt_browser_t **out_method);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_method_chat_gpt_browser_destroy(
    codex_agent_context_t *context,
    codex_agent_authentication_method_chat_gpt_browser_t **method);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_method_chat_gpt_device_code_create(
    codex_agent_context_t *context,
    codex_agent_authentication_method_chat_gpt_device_code_t **out_method);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_method_chat_gpt_device_code_destroy(
    codex_agent_context_t *context,
    codex_agent_authentication_method_chat_gpt_device_code_t **method);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_reference_create(
    codex_agent_context_t *context,
    const codex_agent_string_view_t *id,
    const codex_agent_string_view_t *name,
    const codex_agent_string_view_t *marketplace_name,
    int32_t has_marketplace_path,
    const codex_agent_string_view_t *marketplace_path,
    int32_t has_remote_plugin_id,
    const codex_agent_string_view_t *remote_plugin_id,
    codex_agent_plugin_reference_t **out_reference);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_reference_destroy(
    codex_agent_context_t *context,
    codex_agent_plugin_reference_t **reference);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_reference_id_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_reference_t *reference,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_reference_name_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_reference_t *reference,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_reference_marketplace_name_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_reference_t *reference,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_reference_has_marketplace_path(
    codex_agent_context_t *context,
    codex_agent_plugin_reference_t *reference,
    int32_t *out_has_marketplace_path);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_reference_marketplace_path_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_reference_t *reference,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_reference_has_remote_plugin_id(
    codex_agent_context_t *context,
    codex_agent_plugin_reference_t *reference,
    int32_t *out_has_remote_plugin_id);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_reference_remote_plugin_id_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_reference_t *reference,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_integration_connector_create(
    codex_agent_context_t *context,
    codex_agent_connector_t *connector,
    codex_agent_integration_connector_t **out_integration);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_integration_connector_destroy(
    codex_agent_context_t *context,
    codex_agent_integration_connector_t **integration);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_integration_connector_connector(
    codex_agent_context_t *context,
    codex_agent_integration_connector_t *integration,
    codex_agent_connector_t **out_connector);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_integration_mcp_server_create(
    codex_agent_context_t *context,
    codex_agent_mcp_server_t *server,
    codex_agent_integration_mcp_server_t **out_integration);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_integration_mcp_server_destroy(
    codex_agent_context_t *context,
    codex_agent_integration_mcp_server_t **integration);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_integration_mcp_server_server(
    codex_agent_context_t *context,
    codex_agent_integration_mcp_server_t *integration,
    codex_agent_mcp_server_t **out_server);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_destroy(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t **summary);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_reference(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    codex_agent_plugin_reference_t **out_reference);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_display_name_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_description_copy(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_plugin_summary_is_installed(
    codex_agent_context_t *context,
    codex_agent_plugin_summary_t *summary,
    int32_t *out_is_installed);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_integration_from_connector(
    codex_agent_context_t *context,
    codex_agent_integration_connector_t *connector,
    codex_agent_integration_t **out_integration);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_integration_from_mcp_server(
    codex_agent_context_t *context,
    codex_agent_integration_mcp_server_t *server,
    codex_agent_integration_t **out_integration);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_integration_destroy(
    codex_agent_context_t *context,
    codex_agent_integration_t **integration);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_integration_kind(
    codex_agent_context_t *context,
    codex_agent_integration_t *integration,
    codex_agent_integration_kind_t *out_kind);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_integration_connector(
    codex_agent_context_t *context,
    codex_agent_integration_t *integration,
    codex_agent_integration_connector_t **out_connector);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL codex_agent_integration_mcp_server(
    codex_agent_context_t *context,
    codex_agent_integration_t *integration,
    codex_agent_integration_mcp_server_t **out_server);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_integration_authorization_state_destroy(
    codex_agent_context_t *context,
    codex_agent_integration_authorization_state_t **state);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_integration_authorization_state_status(
    codex_agent_context_t *context,
    codex_agent_integration_authorization_state_t *state,
    codex_agent_integration_authorization_status_t *out_status);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_integration_authorization_state_target(
    codex_agent_context_t *context,
    codex_agent_integration_authorization_state_t *state,
    codex_agent_integration_t **out_target);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_integration_authorization_state_failure(
    codex_agent_context_t *context,
    codex_agent_integration_authorization_state_t *state,
    codex_agent_failure_t **out_failure);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_state_destroy(
    codex_agent_context_t *context,
    codex_agent_authentication_state_t **state);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_state_status(
    codex_agent_context_t *context,
    codex_agent_authentication_state_t *state,
    codex_agent_authentication_status_t *out_status);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_state_has_pending_sign_in_url(
    codex_agent_context_t *context,
    codex_agent_authentication_state_t *state,
    int32_t *out_has_value);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_state_pending_sign_in_url(
    codex_agent_context_t *context,
    codex_agent_authentication_state_t *state,
    codex_agent_authorization_url_t **out_url);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_state_has_device_verification_url(
    codex_agent_context_t *context,
    codex_agent_authentication_state_t *state,
    int32_t *out_has_value);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_state_device_verification_url(
    codex_agent_context_t *context,
    codex_agent_authentication_state_t *state,
    codex_agent_authorization_url_t **out_url);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_state_has_device_user_code(
    codex_agent_context_t *context,
    codex_agent_authentication_state_t *state,
    int32_t *out_has_value);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_state_device_user_code_copy(
    codex_agent_context_t *context,
    codex_agent_authentication_state_t *state,
    uint8_t *buffer,
    size_t capacity,
    size_t *out_required);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_state_has_failure(
    codex_agent_context_t *context,
    codex_agent_authentication_state_t *state,
    int32_t *out_has_value);
CODEX_AGENT_API codex_agent_status_t CODEX_AGENT_CALL
codex_agent_authentication_state_failure(
    codex_agent_context_t *context,
    codex_agent_authentication_state_t *state,
    codex_agent_failure_t **out_failure);