codex-agent-bindings/cpp/include/codex_agent/codex_agent.hpp

enum class McpEnvironmentSource : std::int32_t {
    local = CODEX_AGENT_MCP_ENVIRONMENT_SOURCE_LOCAL,
    remote = CODEX_AGENT_MCP_ENVIRONMENT_SOURCE_REMOTE,
};