codex-agent-runtime-desktop/bindings/csharp/src/CodexAgent/Interop/NativeLeafValueMethods.cs


internal static unsafe partial class NativeMethods
{
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_method_api_key_create")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationMethodApiKeyCreate(nint c,NativeStringView* value,out nint method);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_method_api_key_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationMethodApiKeyDestroy(nint c,ref nint method);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_method_chat_gpt_browser_create")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationMethodChatGptBrowserCreate(nint c,out nint method);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_method_chat_gpt_browser_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationMethodChatGptBrowserDestroy(nint c,ref nint method);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_method_chat_gpt_device_code_create")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationMethodChatGptDeviceCodeCreate(nint c,out nint method);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_method_chat_gpt_device_code_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationMethodChatGptDeviceCodeDestroy(nint c,ref nint method);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_state_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationStateDestroy(nint c,ref nint state);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_state_status")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationStateStatus(nint c,nint state,out CodexAuthenticationStatus status);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_state_has_pending_sign_in_url")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationStateHasPendingSignInUrl(nint c,nint state,out int present);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_state_pending_sign_in_url")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationStatePendingSignInUrl(nint c,nint state,out nint url);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_state_has_device_verification_url")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationStateHasDeviceVerificationUrl(nint c,nint state,out int present);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_state_device_verification_url")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationStateDeviceVerificationUrl(nint c,nint state,out nint url);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_state_has_device_user_code")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationStateHasDeviceUserCode(nint c,nint state,out int present);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_state_device_user_code_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationStateDeviceUserCodeCopy(nint c,nint state,byte* buffer,nuint capacity,out nuint required);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_state_has_failure")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationStateHasFailure(nint c,nint state,out int present);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_authentication_state_failure")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus AuthenticationStateFailure(nint c,nint state,out nint failure);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_from_connector")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationFromConnector(nint c,nint value,out nint integration);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_from_mcp_server")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationFromMcpServer(nint c,nint value,out nint integration);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationDestroy(nint c,ref nint integration);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_kind")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationKind(nint c,nint integration,out int kind);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_connector")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationConnector(nint c,nint integration,out nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_mcp_server")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationMcpServer(nint c,nint integration,out nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_connector_create")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationConnectorCreate(nint c,nint connector,out nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_connector_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationConnectorDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_connector_connector")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationConnectorConnector(nint c,nint value,out nint connector);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_mcp_server_create")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationMcpServerCreate(nint c,nint server,out nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_mcp_server_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationMcpServerDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_mcp_server_server")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationMcpServerServer(nint c,nint value,out nint server);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_authorization_state_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationAuthorizationStateDestroy(nint c,ref nint state);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_authorization_state_status")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationAuthorizationStateStatus(nint c,nint state,out CodexIntegrationAuthorizationStatus status);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_authorization_state_target")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationAuthorizationStateTarget(nint c,nint state,out nint target);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_integration_authorization_state_failure")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus IntegrationAuthorizationStateFailure(nint c,nint state,out nint failure);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_reference_create")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginReferenceCreate(nint c,NativeStringView* id,NativeStringView* name,NativeStringView* marketplace,int hasPath,NativeStringView* path,int hasRemote,NativeStringView* remote,out nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_reference_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginReferenceDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_reference_id_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginReferenceIdCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_reference_name_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginReferenceNameCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_reference_marketplace_name_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginReferenceMarketplaceNameCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_reference_has_marketplace_path")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginReferenceHasMarketplacePath(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_reference_marketplace_path_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginReferenceMarketplacePathCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_reference_has_remote_plugin_id")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginReferenceHasRemotePluginId(nint c,nint value,out int result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_reference_remote_plugin_id_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginReferenceRemotePluginIdCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_destroy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryDestroy(nint c,ref nint value);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_reference")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryReference(nint c,nint value,out nint result);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_display_name_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryDisplayNameCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_description_copy")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryDescriptionCopy(nint c,nint value,byte* b,nuint n,out nuint r);
    [LibraryImport(LibraryName, EntryPoint="codex_agent_plugin_summary_is_installed")][UnmanagedCallConv(CallConvs=[typeof(CallConvCdecl)])]
    internal static partial CodexStatus PluginSummaryIsInstalled(nint c,nint value,out int result);
